fix inline wrapped component height

--- a/packages/ng/new-badge/new-badge.component.scss
+++ b/packages/ng/new-badge/new-badge.component.scss
@@ -1,1 +1,5 @@
 @use '@lucca-front/scss/src/components/newBadge';
+
+:host {
+  display: inline-flex;
+}
